Fixes edgenote overflow issues.

--- a/app/stylesheets/Modal.scss
+++ b/app/stylesheets/Modal.scss
@@ -22,6 +22,8 @@ a.modalDismiss {
   transform: translate(-50%, -50%);
   z-index: 100;
 
+  overflow: scroll;
+
   font-family: $serifFont + ' Book';
 
   a.modalClose {
@@ -39,5 +41,12 @@ a.modalDismiss {
   iframe {
     min-width: 50em;
     min-height: 30em;
+  }
+
+  img {
+    max-width: 100%;
+    width: auto;
+    max-height: 80%;
+    height: auto;
   }
 }
